[FIX] gallery grid imperfect if viewport too small

--- a/dev/sass/wd/_gallery.sass
+++ b/dev/sass/wd/_gallery.sass
@@ -49,6 +49,7 @@
 
 .gallery-item
 	display: block
+	flex-shrink: 0
 	img
 		width: 100%
 		height: auto
